# dioxus-fullstack

./: .gitignore  README.md
file-upload/: Cargo.toml  Dioxus.toml
file-upload/src/: main.rs
image-hosting/: Cargo.toml  Dioxus.toml  env-example  image-hosting.sql  input.css  package.json
image-hosting/assets/: main.css
image-hosting/src/: b2.rs  config.rs  db.rs  jwt.rs  layout.rs  lib.rs  main.rs  models.rs  route.rs
image-hosting/src/components/: dialog.rs  icons.rs  login.rs  mod.rs  upload.rs
image-hosting/src/pages/: mod.rs  not_found.rs
image-hosting/src/pages/backend/image/: home.rs
image-hosting/src/pages/frontend/: home.rs
todo-app/: Cargo.toml  input.css  package.json
todo-app/assets/: main.css
todo-app/src/: api.rs  components.rs  db.rs  lib.rs  main.rs  models.rs
todo-app/src/components/: body.rs  header.rs  mod.rs
using-sqlx/: Cargo.toml  Dioxus.toml
using-sqlx/src/: main.rs
