[package]
name = "image-hosting"
version = "0.1.0"
authors = ["axumrs <team@mail.axum.eu.org>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AxumCourse/dioxus-fullstack"
homepage = "https://axum.eu.org/subject/dioxus-fullstack"
description = "AXUM中文网专题： dioxus 全栈"


[dependencies]
config = { version = "0.15.11", optional = true }
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dotenv = { version = "0.15.0", optional = true }
lazy_static = { version = "1.5.0", optional = true }
mime_guess = { version = "2.0.5" }
rust-s3 = { version = "0.35.1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = { version = "0.10.9", optional = true }
sqlx = { version = "0.8.5", features = [
    "postgres",
    "runtime-tokio",
], optional = true }
tokio = { version = "1.45.0", features = ["full"], optional = true }
xid = { version = "1.1.1", optional = true }
dioxus-sdk = { version = "0.7.0-alpha.1", features = [
    "storage",
], optional = true }

[features]
default = ["web"]
web = ["dioxus/web", "dioxus-sdk"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "dep:tokio",
    "dep:rust-s3",
    "dep:lazy_static",
    "dep:dotenv",
    "dep:config",
    "dep:sha2",
    "dep:sqlx",
    "dep:xid",
]


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
